--- a/css/domestic.css
+++ b/css/domestic.css
@@ -304,6 +304,12 @@ h5{
 
 
 /* 타임딜 time deal */
+.time_banner{
+  background: url(../images/domestic/timedeal_banner.jpg) no-repeat 50% 50%;
+  width: 100%;
+  height: 269px;
+  background-color: #f7f7f7;
+}
 .time_deal{
     width: 1442px;
     margin: 0 auto;
@@ -549,6 +555,14 @@ h5{
 
 #discount>img{
   width: 100%;
+}
+
+
+.discount_banner{
+  background: url(../images/domestic/discount_banner.jpg) no-repeat 50% 50%;
+  width: 100%;
+  height: 239px;
+  background-color: #67b5e3;
 }
 
 .dis_box{
